# my-coding-agent

./: .claude  .env.example  .gitignore  .gitmessage  .no-mistakes.yaml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTE.md  LICENSE  Makefile  README.md  SECURITY.md  agent.ipynb  agent.py  main.ipynb  openspec  pyproject.toml  sample.ipynb
.archive/: agent.ipynb
.github/workflows/: ci.yml  docs.yml  pr-title.yml
.hooks/: check_commit_body.py  check_commit_refs_footer.py  check_commit_subject_format.py  check_conformity_report.py  check_docs_updated.py  check_no_symlinks.py  conformity.py  conformity_report.py
.my_coding_agent/: discovery.md
.my_coding_agent/evals/cases/: cve_aggregation.json  hello_world.json  trajectory_smoke.json
.my_coding_agent/evals/datasets/example/: versions.jsonl
.my_coding_agent/evals/rubrics/: cve_aggregation_rubric.json
.my_coding_agent/skills/commit-and-push/: SKILL.md
.my_coding_agent/skills/debug-failing-run/: SKILL.md
.my_coding_agent/skills/run-quality-checks/: SKILL.md
agents/: agentic_discovery.py  agentic_session_analyzer.py  discovery.py  session_analyzer.py
docs/: api.rst  claude.md  conf.py  contribute.md  index.rst
examples/: agentic_discovery.py  agentic_session_analyzer.py  agentic_shell.py  cisa_kev.json  eval_run_config.yaml  eval_run_cve_subagents.yaml  eval_run_cve_subagents_rubric_path.yaml  iterative_workflow_generator_evaluator.py  iterative_workflow_generator_evaluator.yaml  sample.ipynb  session_analyzer.py  soc_analyst_study_plan_generator_evaluator.yaml
examples/sample_output/: iterative_workflow_generator_evaluator.events.jsonl
scripts/: audit_commits.py
src/my_coding_agent/: __init__.py  _logging.py  agent.py  cli.py  exceptions.py  handoff.py  llm.py  log_parser.py  logger.py  tool_execution.py  tool_routing.py  tools.py  utils.py
src/my_coding_agent/agents/: discovery.py  session_analyzer.py
src/my_coding_agent/engine/: __init__.py  agent.py  checkpoint.py  routing.py  schema.py
src/my_coding_agent/engine/egress/: __init__.py  schema.py
src/my_coding_agent/engine/exfil/: __init__.py  schema.py
src/my_coding_agent/engine/hooks/: __init__.py  schema.py
src/my_coding_agent/engine/llm/: __init__.py  errors.py  parsing.py  schema.py
src/my_coding_agent/engine/provenance/: __init__.py  schema.py
src/my_coding_agent/engine/sandbox/: __init__.py  schema.py
src/my_coding_agent/engine/tool_execution/: __init__.py  args.py  concurrency.py  envelope.py  lang.py  output.py  policy.py  records.py  schema.py
src/my_coding_agent/engine/tool_registry/: __init__.py  converter.py  exceptions.py  registry.py  schema.py  skills.py
src/my_coding_agent/evals/: __init__.py  cases.py  cli.py  compare.py  datasets.py  evaluation.py  judge.py  reporting.py  results.py  run_config_file.py  runner.py  schema.py  scoring.py  trajectory.py
src/my_coding_agent/llm/: __init__.py
src/my_coding_agent/logger/: __init__.py  banner.py  logging_core.py  session_log.py  summary.py  terminal_ui.py
src/my_coding_agent/observability/: __init__.py  error_classification.py  events.py  pricing.py  reader.py  recorder.py  records.py  report.py  sampler.py  schema.py  tree.py
src/my_coding_agent/pipeline/: __init__.py  anomaly.py  context.py  dag.py  graph.py  handoff.py  node.py  registry.py  router.py  schema.py  supersession.py
src/my_coding_agent/pipeline/examples/: simple.py
src/my_coding_agent/pipeline/nodes/: __init__.py  agent.py  agent_node.py  anomaly_detect.py  context_guard.py  context_preflight.py  context_summarizer.py  finalize_step.py  finish_check.py  handoff.py  llm_call.py  prompt_stage.py  router.py  token_tracking.py  tool_dispatch.py  tool_routing.py
src/my_coding_agent/tool_execution/: __init__.py  args.py  output.py  result_schema.py
src/my_coding_agent/tool_registry/: __init__.py  converter.py  registry.py
src/my_coding_agent/utils/: __init__.py  exceptions.py  logging_core.py  terminal_ui.py
src/my_coding_agent/viewer/: __init__.py  evals_reader.py  evals_server.py  pricing.py  reader.py  schema.py  server.py  sumcheck.py
src/my_coding_agent/viewer/_vendor/: README.md  codemirror.bundle.js  dompurify.bundle.js  markdown-it.bundle.js
src/my_coding_agent/webui/: __init__.py  admin.py  builder.py  builder_runs.py  evals_config.py  evaluations_api.py  schema.py  server.py  store.py
src/my_coding_agent/webui/evals/: __init__.py  api.py  reader.py  server.py
src/my_coding_agent/workflows/: main.py
tests/: conftest.py  test_agent.py  test_anomaly_detect_node.py  test_bash_sandbox_wiring.py  test_checkpoint.py  test_cli_help_and_gates.py  test_cli_safety_gate_flag.py  test_conformity_gate.py  test_context_guard.py  test_egress.py  test_eval_datasets.py  test_evals_cases.py  test_evals_cli.py  test_evals_compare.py  test_evals_evaluation.py  test_evals_reporting.py  test_evals_results.py  test_evals_run_config_file.py  test_evals_runner.py  test_evals_scoring.py  test_exceptions.py  test_exceptions_relocation.py  test_exfil.py  test_exfil_gate.py  test_handoff.py  test_hooks.py  test_hooks_lifecycle.py  test_incremental_trace_capture.py  test_judge.py  test_llm_network.py  test_llm_parsing.py  test_llm_pure.py  test_llm_resilience.py  test_logger.py  test_logger_render.py  test_observability.py  test_observability_report.py  test_observability_tree.py  test_pipeline.py  test_pipeline_anomaly.py  (+55 more)
workflows/: main.py
