[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-coding-agent"
version = "0.1.0"
description = "Minimal Python agent for local LLMs with decorator-based tool calling"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Noordeep Singh" }]
dependencies = [
    "click>=8.1",
    "colorama>=0.4.6",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "msgpack>=1.2.1",
    "plotext>=5.0",
    "prompt-toolkit>=3.0",
    "python-dotenv>=1.0",
    "rich>=15.0.0",
]

[project.scripts]
my-coding-agent = "my_coding_agent.pipeline.examples.simple:main"

[tool.hatch.build.targets.wheel]
packages = ["src/my_coding_agent"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=2.1.0",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "detect-secrets>=1.5.0",
    "ruff>=0.15.17",
    "furo>=2024.1.29",
    "myst-parser>=4.0",
    "sphinx>=9.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# report.py embeds an HTML/CSS/JS template as a string literal; wrapping its
# markup lines to 88 cols would harm readability, not help it.
"src/my_coding_agent/observability/report.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.bandit]
recursive = true
exclude_dirs = ["tests", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage gate per CONTRIBUTE.md §30: 85% minimum. Measured over the library
# package (src/my_coding_agent).
addopts = "--cov=my_coding_agent --cov-branch --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["src/my_coding_agent"]

[tool.coverage.report]
show_missing = true
