[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-coding-agent"
version = "2.0.0"
description = "Minimal Python agent for local LLMs with decorator-based tool calling"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Noordeep Singh" }]
dependencies = [
    "click>=8.1",
    "colorama>=0.4.6",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "plotext>=5.0",
    "prompt-toolkit>=3.0",
    "psutil>=7.2.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0.2",
    "rich>=15.0.0",
]

[project.scripts]
my-coding-agent = "my_coding_agent.cli:main"
my-coding-agent-webui = "my_coding_agent.viewer.server:main"
my-coding-agent-eval = "my_coding_agent.evals.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/my_coding_agent"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=2.1.0",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "detect-secrets>=1.5.0",
    "ruff>=0.15.17",
    "furo>=2024.1.29",
    "myst-parser>=4.0",
    "sphinx>=9.1.0",
    "types-psutil>=7.2.2.20260518",
    "types-PyYAML>=6.0.12",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "C901", "B", "UP", "SIM", "RUF", "PT", "S", "D", "ERA", "ARG"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# server.py embeds HTML/CSS/JS templates as string literals;
# wrapping their markup lines to 88 cols would harm readability, not help it.
# The same templates deliberately use typographic characters (›, −) in the
# rendered UI, which RUF001 otherwise flags as ambiguous.
"src/my_coding_agent/viewer/server.py" = ["E501", "RUF001"]
# Missing-docstring rules (D101/D102/D103/D107) are tracked debt: initial volume
# (~1039 findings) is unmanageable within one mechanical lint-conformance PR.
# D2xx/D3xx/D4xx docstring format rules stay enforced. See issue #222.
# D205/D415 are also tracked debt (~114 findings): most docstrings wrap their
# summary sentence across physical lines, so satisfying D205 requires rewriting
# the summary/description prose, not a mechanical fix; a naive fix trades D205
# for D415. See issue #223.
"src/**/*.py" = ["D101", "D102", "D103", "D107", "D205", "D415"]
# pytest idiom: assert is the standard assertion mechanism in tests, not a
# security concern (bandit S101 flags "assert" broadly; not applicable in tests).
# S108: "/tmp/..." strings here are dummy tool-call args/fixture data, never
# paths this test suite actually writes to.
# ARG001/ARG002/ARG005: unused-argument findings here are almost entirely test
# doubles that intentionally mirror a real method's signature -- pytest fixture
# parameters (renaming breaks fixture injection, which pytest resolves by exact
# parameter name) and monkeypatched stand-ins for ToolsRegistry methods (whose
# names are inspected at runtime by engine/tool_execution/args.py's arg-name
# validation; renaming one silently broke test_run_success during discovery,
# with no lint signal). Renaming for lint conformance is not safe here.
"tests/**/*.py" = [
    "D101", "D102", "D103", "D107", "D205", "D415", "S101", "S108",
    "ARG001", "ARG002", "ARG005",
]

[tool.mypy]
python_version = "3.12"
files = ["src"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.bandit]
recursive = true
exclude_dirs = ["tests", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage gate per CONTRIBUTE.md §30: 85% minimum. Measured over the library
# package (src/my_coding_agent).
addopts = "--cov=my_coding_agent --cov-branch --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["src/my_coding_agent"]

[tool.coverage.report]
show_missing = true
omit = [
    "*/schema.py",
]
